# judicialprediction

./: .dockerignore  .gitignore  CLAUDE.md  README.md  SPRINT_10_PLAN.md  SPRINT_11_PLAN.md  SPRINT_12_PLAN.md  SPRINT_15_PLAN.md  SPRINT_17_PLAN.md  SPRINT_20_PLAN.md  SPRINT_22_PLAN.md  SPRINT_3_PLAN.md  SPRINT_4_PLAN.md  SPRINT_5_PLAN.md  SPRINT_6_PLAN.md  SPRINT_7_PLAN.md  SPRINT_8_PLAN.md  SPRINT_9_PLAN.md  docker-compose.dev.yml  package.json
python/admin/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml
python/admin/audit_log/: admin.py  apps.py  models.py
python/admin/audit_log/migrations/: 0001_initial.py
python/admin/audit_log/tests/: test_admin.py
python/admin/core/: admin.py  apps.py  db_router.py  middleware.py  models.py  security_headers.py
python/admin/core/tests/: test_admin_smoke.py
python/admin/judicialpredict_admin/: asgi.py  settings.py  urls.py  wsgi.py
python/admin/operators/: admin.py  apps.py  auth_backends.py  jwt_helpers.py  models.py  oidc.py  oidc_views.py  pat_models.py  views.py
python/admin/operators/migrations/: 0001_initial.py  0002_operator_password.py  0003_operator_username_alter_operator_password.py  0004_passwordresettoken.py  0005_personalaccesstoken.py
python/admin/operators/tests/: test_auth.py  test_oidc.py  test_password_reset.py  test_pat.py
python/admin/tenant_settings/: admin.py  apps.py  audit.py  forms.py  models.py
python/admin/tenant_settings/tests/: test_admin.py
python/ml-inference-svc/: Dockerfile  MODEL_CARD.md  pyproject.toml
python/ml-inference-svc/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
python/ml-inference-svc/catboost_info/learn/: events.out.tfevents
python/ml-inference-svc/data/: materiality_calibration.json
python/ml-inference-svc/scripts/: apply_posture_llm.py  assemble_corpus_v17.py  assemble_corpus_v19.py  build_legal_embeddings.py  build_real_corpus.py  citation_features.py  compute_cited_features.py  diagnose_ece.py  enrich_layer3.py  export_real_corpus.sql  extract_posture_llm.py  extract_practice_area_llm.py  fjc_ingest.py  generate_stubs.sh  generate_synthetic_cases.py  generate_synthetic_cases_v1.py  load_citations_bulk.py  party_types.py  practice_area.py  president_ideology.py  procedural_posture.py  promote_champion.py  scdb_ingest.py  text_embeddings.py  train_first_models.py  train_real_v1.py
python/ml-inference-svc/src/ml_inference_svc/: __init__.py  audit_recorder.py  conformal.py  grpc_server.py  legal_bert.py  main.py  per_court_calibration.py  (+1 more)
python/ml-inference-svc/tests/: test_enrich_layer3.py  test_grpc_server.py  test_health.py  test_materiality.py  test_predict_endpoint.py  test_president_ideology.py  test_proto_roundtrip.py  test_synthetic_data.py  test_train_models.py
rust/: .mutants-baseline.json  CARGO_MUTANTS_BASELINE.md  Cargo.toml  README.md
rust/api-gateway/: Cargo.toml  Dockerfile  README.md  build.rs
rust/api-gateway/src/: app.rs  auth.rs  case_import.rs  graphql_predict.rs  lib.rs  main.rs  ml_inference_proto.rs  pat_auth.rs  rate_limit.rs  rest_api.rs
rust/api-gateway/tests/: e2e_smoke.rs
rust/audit-recorder/: Cargo.toml
rust/audit-recorder/src/: lib.rs
rust/audit-recorder/tests/: rls_integration.rs
rust/cost-engine/: Cargo.toml
rust/cost-engine/src/: lib.rs  litigation_cost.rs
rust/cost-engine/tests/: proptest_cost.rs
rust/decision-arith/: Cargo.toml
rust/decision-arith/src/: lib.rs  recommend.rs  settle.rs
rust/decision-arith/tests/: proptest_ev.rs
rust/dime-ingest/: Cargo.toml
rust/dime-ingest/fixtures/: dime-judges-mini.csv
rust/dime-ingest/src/: lib.rs  main.rs  matcher.rs  parser.rs
rust/dime-ingest/tests/: parser_test.rs
rust/event-broker/: Cargo.toml
rust/event-broker/src/: main.rs
rust/feature-deriver/: Cargo.toml
rust/feature-deriver/src/: main.rs
rust/feature-store/: Cargo.toml  build.rs
rust/feature-store-types/: Cargo.toml
rust/feature-store-types/src/: lib.rs
rust/feature-store-types/tests/: proptest_types.rs
rust/feature-store/migrations/: 20260507120000_baseline.sql  20260507120001_seed_dev_tenant.sql  20260507120002_app_role.sql  20260507120003_jp_app_password.sql  20260507120004_audit_log_rls_and_outbound_cols.sql  20260509120000_tenant_settings.sql  20260509130000_case_documents.sql  20260509140000_jp_admin_role.sql  20260510120000_cases_prediction_columns.sql  20260510130000_predictions_history.sql  20260513120000_kg_schema.sql  20260513130000_case_documents_features.sql  20260513140000_case_documents_layer3.sql  20260513150000_case_document_citations.sql  20260513160000_cases_nlp_suggestion.sql  20260517100000_dime_provenance.sql  20260518100000_s15_labels_and_judges.sql  20260518110000_s16_attorneys.sql  20260518120000_s16_primary_judge.sql  20260608100000_mqs_provenance.sql  20260630100000_jcs_provenance.sql  20260722100000_cases_ideology_provenance.sql  20260813100000_cases_date_filed.sql
rust/feature-store/src/: lib.rs  main.rs  server.rs  tenant_settings.rs
rust/feature-store/tests/: tenant_settings_audit_test.rs  tenant_settings_test.rs
rust/ingest-fetcher/: Cargo.toml
rust/ingest-fetcher/src/: cap.rs  citations.rs  db.rs  extract.rs  fetch.rs  kg.rs  lib.rs  main.rs  parse.rs  rest.rs
rust/ingest-fetcher/tests/: build_fixture.sh  db_integration.rs  extract_accuracy.rs  parse_test.rs
rust/jcs-ingest/: Cargo.toml
rust/jcs-ingest/fixtures/: jcs-mini.csv
rust/jcs-ingest/src/: lib.rs  main.rs  parser.rs
rust/jcs-ingest/tests/: parser_test.rs
rust/monte-carlo-sim/: Cargo.toml
rust/monte-carlo-sim/src/: lib.rs  main.rs
rust/monte-carlo-sim/tests/: proptest_sim.proptest-regressions  proptest_sim.rs
rust/mqs-ingest/: Cargo.toml
rust/mqs-ingest/fixtures/: mqs-mini.csv
rust/mqs-ingest/src/: aggregator.rs  lib.rs  main.rs  parser.rs
rust/mqs-ingest/tests/: parser_test.rs
rust/partner-gateway/: Cargo.toml
rust/partner-gateway/src/: main.rs
rust/rate-limit/: Cargo.toml
rust/rate-limit/proptest-regressions/: lib.txt
rust/rate-limit/src/: lib.rs
rust/scripts/: mutants-weekly.cron  mutants-weekly.sh
(+177 files in other folders)
