[project]
name = "judicialpredict-admin"
version = "0.1.0"
description = "JudicialPredict operator admin console (Django 5, managed=False models, RLS-aware)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6",
    "psycopg[binary]>=3.2,<4",
    "django-environ>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-django>=4.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "judicialpredict_admin.settings"
python_files = ["test_*.py"]
addopts = "--tb=short -v"
