[project]
name = "judicialpredict-admin"
version = "0.1.0"
description = "JudicialPredict operator admin console (Django 5, managed=False models, RLS-aware)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6",
    "psycopg[binary]>=3.2,<4",
    "django-environ>=0.11",
    # JWT signing for the login view (HS256, same secret as api-gateway).
    "pyjwt>=2.8,<3",
    # bcrypt hasher backend — required by BCryptSHA256PasswordHasher.
    "bcrypt>=4.0,<5",
    # OIDC SSO (S6.6) — Authlib's Django integration for the auth-code flow.
    "authlib>=1.3,<2",
    # Authlib's django_client integration imports its requests-based HTTP
    # backend at module load; pin it explicitly rather than rely on a
    # transitive pull.
    "requests>=2.31,<3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-django>=4.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "judicialpredict_admin.settings"
python_files = ["test_*.py"]
addopts = "--tb=short -v"
