[project]
name = "ml-inference-svc"
version = "0.1.0"
description = "JudicialPredict ML inference service (FastAPI + tonic/grpc stubs)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "grpcio>=1.64",
    "grpcio-tools>=1.64",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_inference_svc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
