[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "api_gateway"
path = "src/lib.rs"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# feature-store is still a compile-time dep for its generated stubs + FeatureStoreServiceClient.
# At runtime the api-gateway connects to feature-store-server over gRPC (no in-process Repo).
feature-store = { path = "../feature-store" }
rate-limit = { path = "../rate-limit" }
audit-recorder = { path = "../audit-recorder" }
tonic = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower = { version = "0.5" }
bytes = "1"
sqlx = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
