[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "api_gateway"
path = "src/lib.rs"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# feature-store is still a compile-time dep for its generated stubs + FeatureStoreServiceClient.
# At runtime the api-gateway connects to feature-store-server over gRPC (no in-process Repo).
feature-store = { path = "../feature-store" }
rate-limit = { path = "../rate-limit" }
audit-recorder = { path = "../audit-recorder" }
decision-arith = { path = "../decision-arith" }
cost-engine = { path = "../cost-engine" }
# S5.8: extractFeatures Query reuses the same pure NLP helpers ingest-fetcher
# uses to back-fill case_documents (classify_case_type / detect_outcome /
# extract_judge_names) so the operator-facing extract and the corpus
# back-fill stay 1:1.
ingest-fetcher = { path = "../ingest-fetcher" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
dashmap = { workspace = true }
# Added for S4.2/S4.3: direct DB access for createCase / listCases resolvers.
sqlx = { workspace = true }
rust_decimal = { workspace = true }
# S6.15: PAT token hashing (SHA-256 hex).
sha2 = { workspace = true }
hex = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
wiremock = "0.6"
tower = { version = "0.5" }
bytes = "1"
tokio-stream = { version = "0.1", features = ["net"] }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
