[package]
name = "dime-ingest"
version = "0.1.0"
edition = "2021"

[lib]
name = "dime_ingest"
path = "src/lib.rs"

[[bin]]
name = "dime-ingest"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
# CSV is only used here; not in the workspace deps to keep other crates lean.
csv = "1.3"
# Re-use ingest-fetcher's name normaliser so DIME matches against the same
# normalised string ingest-fetcher writes into judges.normalized_name.
ingest-fetcher = { path = "../ingest-fetcher" }
