[package]
name = "feature-deriver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "feature-deriver"
path = "src/main.rs"

[dependencies]
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
