[package]
name = "feature-store"
version = "0.1.0"
edition = "2021"

[dependencies]
feature-store-types = { path = "../feature-store-types" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
