[package]
name = "feature-store"
version = "0.1.0"
edition = "2021"

# Keep the library target so api-gateway can use the generated stubs + repo types.
[lib]
name = "feature_store"
path = "src/lib.rs"

# Standalone gRPC server binary — binds FeatureStoreService on port 4001.
[[bin]]
name = "feature-store-server"
path = "src/main.rs"

[dependencies]
feature-store-types = { path = "../feature-store-types" }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = { workspace = true }
