[package]
name = "ingest-fetcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingest-fetcher"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
