[package]
name = "mqs-ingest"
version = "0.1.0"
edition = "2021"

[lib]
name = "mqs_ingest"
path = "src/lib.rs"

[[bin]]
name = "mqs-ingest"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
csv = "1.3"
# Re-use Sprint-7's name-norm + matcher.  Keeps the two ingest crates
# perfectly aligned on how they look judges up.
dime-ingest = { path = "../dime-ingest" }
ingest-fetcher = { path = "../ingest-fetcher" }
